fix: input__file width on mobile resolutions

--- a/src/sass/blocks/input/__file/_input__file.scss
+++ b/src/sass/blocks/input/__file/_input__file.scss
@@ -3,6 +3,7 @@
     opacity: 0;
     visibility: hidden;
     position: absolute;
+    width: 1px;
     &_brief {
       left: 0;
     }
